...
    <string name="remote_reconnecting">Reconnecting</string>
    <string name="remote_use_touchpad">Use touchpad</string>
    <string name="remote_use_directional">Use directional pad</string>
    <string name="remote_touchpad_hint">Touch and move to control</string>

    <string name="settings_title">Settings</string>
    <string name="settings_interaction">Interaction</string>
    <string name="settings_haptics">Haptics</string>
    <string name="settings_haptics_summary">Vibrate briefly when you use the remote</string>
    <string name="settings_phone_volume">Phone volume buttons</string>
    <string name="settings_phone_volume_summary">Use the phone’s volume buttons to control the television while Remote is open</string>
    <string name="settings_navigation_mode">Navigation mode</string>
    <string name="settings_navigation_directional">Directional</string>
    <string name="settings_navigation_pointer">Pointer</string>
    <string name="settings_about">About</string>
    <string name="settings_app_version">App version</string>
    <string name="settings_back">Back</string>
</resources>

